<resources>
    <string name="app_name">Layout</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="reminder">Reminder</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="bmw_group">BMW Group</string>
    <string name="tombol">Button</string>
    <string name="button">Tombol</string>
    <string name="bp">Blackpink Area</string>
    <string name="name">Name</string>
    <string name="register">Registrasi</string>
    <string name="Form">Form</string>
    <string-array name="countries_array">
        <item>Afganistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antartica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijin</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Spanyol</item>
        <item>England</item>
        <item>Rusia</item>
        <item>France</item>
        <item>Italy</item>
    </string-array>
</resources>