<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="350sp"
        android:layout_height="500sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/colorAccent"
        app:strokeWidth="3dp"
        app:strokeColor="@color/black">
        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Form"
            android:textSize="50dp"
            android:gravity="center"
            app:fontFamily="@font/russo_one"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/textName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/name"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperText="Required"
            app:startIconDrawable="@drawable/person">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/textEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:hint="@string/email"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperText="Required"
            app:startIconDrawable="@drawable/email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/textPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperText="Required"
            app:startIconDrawable="@drawable/password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_button"
                android:layout_marginTop="400dp"
                android:text="@string/register"
                app:icon="@drawable/regis"
                style="?attr/materialButtonOutlinedStyle"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"
                app:iconTint="@color/black"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>